# linalg-ml

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: gd_demo.py  poly_demo.py  regression_demo.py
linalgml/: __init__.py  features.py  gd.py  linreg.py
tests/: test_gd.py  test_linreg.py  test_poly.py
