[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linalgml"
version = "0.1.0"
description = "Minimal machine learning built on the linalg C library (via linalgpy)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# linalgpy is installed editable from the git submodule (external/linalg-py),
# so it is not listed here (it's not on PyPI). numpy is used for data handling.
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7"]
demo = ["matplotlib>=3.7"]

[tool.setuptools]
packages = ["linalgml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
